<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:rowCount="5"
        android:columnCount="6">

    <Button
        android:id="@+id/btnClear"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="0"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/c"/>

    <Button
        android:id="@+id/btnBracketLeft"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="1"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/bracketL" />

    <Button
        android:id="@+id/btnBracketRight"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="2"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/bracketR" />

    <Button
        android:id="@+id/btnDivide"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="3"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/divide" />

    <Button
        android:id="@+id/btn7"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="1"
        android:layout_column="0"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_7" />

    <Button
        android:id="@+id/btn8"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="1"
        android:layout_column="1"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_8" />

    <Button
        android:id="@+id/btn9"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="1"
        android:layout_column="2"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_9" />

    <Button
        android:id="@+id/btnMultiply"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="1"
        android:layout_column="3"
        android:background="@color/black"
        android:textColor="@color/grey"
        app:backgroundTint="@color/black"
        android:text="@string/multiply"/>

    <Button
        android:id="@+id/btn4"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="2"
        android:layout_column="0"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_4" />

    <Button
        android:id="@+id/btn5"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="2"
        android:layout_column="1"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_5" />

    <Button
        android:id="@+id/btn6"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="2"
        android:layout_column="2"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_6" />

    <Button

        android:id="@+id/btnMinus"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="2"
        android:layout_column="3"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/minus" />

    <Button
        android:id="@+id/btn1"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="3"
        android:layout_column="0"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_1" />

    <Button
        android:id="@+id/btn2"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="3"
        android:layout_column="1"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_2" />

    <Button
        android:id="@+id/btn3"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="3"
        android:layout_column="2"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_3" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="3"
        android:layout_column="3"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/plus" />

    <Button
        android:id="@+id/btn0"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="4"
        android:layout_column="0"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/_0" />

    <Button
        android:id="@+id/btnDot"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="4"
        android:layout_column="1"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text="@string/dot" />


        <Button
            android:id="@+id/btnBackspace"
            android:layout_width="50dp"
            android:layout_height="100dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:background="@color/black"
            android:text="⬅"
            android:textColor="@color/grey"
            android:textSize="30sp"
            app:backgroundTint="@color/black" />

        <Button
        android:id="@+id/btnTotal"
        android:layout_columnWeight="1"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:textSize="30sp"
        android:layout_row="4"
        android:layout_column="3"
        android:background="@color/black"
        app:backgroundTint="@color/black"
        android:textColor="@color/grey"
        android:text= "@string/total" />

    </GridLayout>


</RelativeLayout>